fix some major css layout problems

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .grid-container {
     display: inline-grid;
-    grid-template-columns: 210px repeat(1, 1fr);
+    grid-template-columns: 210px repeat(5, 1fr);
     grid-template-rows: 150px repeat(1, 1fr);
 }
 
@@ -49,7 +49,7 @@ h1 {
 
 .top-bar {
     background-color: #e4e0e0;
-    grid-column: 2 / 5;
+    grid-column: 2 / 7;
     padding: 20px;
 
 }
@@ -57,8 +57,8 @@ h1 {
 .right-side {
     height: 100%;
     background-color: #fff;
-    grid-column-start: 4;
-    grid-column-end: 5;
+    grid-column-start: 5;
+    grid-column-end: 7;
     grid-row-start: 2;
     grid-row-end: 5;
 
@@ -170,7 +170,7 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
+    gap: 20px;
 }
 
 .notes {
@@ -216,5 +216,5 @@ p {
 
 .not-ico-img:hover {
     cursor: pointer;
-    filter: opacity(70%)
+    filter: opacity(60%)
 }
